--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://github.com/douglascrockford/JSON-js/blob/master/json2.js"></script>
-    <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Create a New Pen</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
   <body>
-    <div id='input'>
-  	  <input id='textbox' type='text' />
-  	  <button id='submit'>Submit</button>
-  	</div>
-  	</br>
-  	<div id='result'>
-  	</div>
-  </body>
+  <img id='splash' src='https://rskbeck.000webhostapp.com/melt.gif'></img>
+</body>
+  
+  
+</body>
 </html>
