New version test

--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
 </head>
 
 <body>
-  <body>
-  <img id='splash' src='https://rskbeck.000webhostapp.com/melt.gif'></img>
-</body>
+  <div id='back'>
+  <div id='cover'></div>
+  <div id='frame'>
+    <div id='content'>
+      <div id='bttns'>
+        <a href='https://www.google.com'><div class='bttn'>
+          ART
+        </div></a>
+        <a href='https://www.google.com'><div class='bttn'>
+          MUSIC
+        </div></a>
+        <a href='https://www.google.com'><div class='bttn'>
+          GAMES
+        </div></a>
+        <a href='https://www.google.com'><div class='bttn'>
+          PROJECTS
+        </div></a>
+      </div>
+      <div id='head'>Ryan Kehlenbeck</div>
+      <div id='pge'>
+        ...
+      </div>
+    </div>
+  </div>
   
   
 </body>
