--- a/pages/art.htm
+++ b/pages/art.htm
@@ -1,1 +1,13 @@
-Ryan Kehlenbeck
+<head>
+<link rel="stylesheet" href="https://rskbeck.github.io/css/framestyle.css">
+</head>
+
+<div id='grid'>
+  <div class='shadow-box' id='morph' style="background-color: #333">
+  	<img class='inside' id='splash' src='https://rskbeck.000webhostapp.com/melt.gif'></img>
+  </div>
+  <div class='box' id='glitch' style="background-color: #fff">
+  	<img class='inside' id='2' src='https://rskbeck.github.io/img/2.jpg'></img>
+  	<div class='shadow-inside' />
+  </div>
+</div>
