--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   
   
       <link rel="stylesheet" href="css/style.css">
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="js/index.js"></script>
   
 </head>
 
@@ -17,9 +18,9 @@
   <div id='frame'>
     <div id='content'>
       <div id='bttns'>
-        <a href='https://www.google.com'><div class='bttn'>
+        <div class='bttn' id='art'>
           ART
-        </div></a>
+        </div>
         <a href='https://www.google.com'><div class='bttn'>
           MUSIC
         </div></a>
@@ -30,10 +31,11 @@
           PROJECTS
         </div></a>
       </div>
-      <div id='head'>Ryan Kehlenbeck</div>
+      <div id='pge'></div>
+      <!--div id='head'>Ryan Kehlenbeck</div>
       <div id='pge'>
         ...
-      </div>
+      </div-->
     </div>
   </div>
   
