Added fader and viewer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
       </div-->
     </div>
   </div>
-  
+  <div id='fader'>
+    <div id='screen'></div>
+    <button id='closer' onclick='hide()'>Close</button>
+    <div id='viewer'></div>
+  </div>
   
 </body>
 </html>
