--- a/pages/art.htm
+++ b/pages/art.htm
@@ -1,10 +1,16 @@
 <head>
 <link rel="stylesheet" href="css/framestyle.css">
+<script src="https://rskbeck.github.io/js/art.js"></script>
 </head>
 
 <div id='grid'>
   <div class='shadow-box' id='morph' style="background-color: #333">
   	<img class='inside' id='splash' src='https://rskbeck.000webhostapp.com/melt.gif'></img>
-  	<div class='cover'><div class='centeredtext'>SPLASH</div></div>
+  	<div class='cover' id='morphcover'><div class='centeredtext'>SPLASH</br>(2016)</div></div>
+  </div>
+  <div class='box' id='glitch' style="background-color: #fff">
+  	<img class='inside' id='2' src='https://rskbeck.github.io/img/2.jpg'></img>
+  	<div class='shadow-inside' />
+  	<div class='cover' id='glitchcover'><div class='centeredtext'>GLITCH</br>(2016)</div></div>
   </div>
 </div>
