--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class='bttn' id='art'>
           ART
         </div>
-        <a href='https://www.google.com'><div class='bttn'>
+        <div class='bttn' id='wbs'>
           MUSIC
-        </div></a>
+        </div>
         <a href='https://www.google.com'><div class='bttn'>
           GAMES
         </div></a>
@@ -46,3 +46,4 @@
   
 </body>
 </html>
+<!-- http-server -c-1 --cors -->
