--- a/pages/art.htm
+++ b/pages/art.htm
@@ -1,5 +1,5 @@
 <head>
-<link rel="stylesheet" href="css/framestyle.css">
+<link rel="stylesheet" href="https://rskbeck.github.io/css/framestyle.css">
 <script src="https://rskbeck.github.io/js/art.js"></script>
 </head>
 
