Added scrolling div and fixed positions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           PROJECTS
         </div></a>
       </div>
-      <div id='pge'></div>
+      <div id='pge'><div id='scroller'></div></div>
       <!--div id='head'>Ryan Kehlenbeck</div>
       <div id='pge'>
         ...
