--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
         <a href='https://www.google.com'><div class='bttn'>
           PROJECTS
         </div></a>
+        <div class='bttn' id='hme'>
+          HOME
+        </div>
       </div>
-      <div id='pge'><div id='scroller'></div></div>
+      <div id='pge'><div id='scroller'><div id='head'>RYAN KEHLENBECK</div></br></br></br>
+Ryan Kehlenbeck is a Software Engineer, Musician, and Artist. He recently graduated from Cal Poly, San Luis Obispo with a bachelor's degree in Software Engineering. He enjoys writing code, 3D modeling, writing music, making games, and playing games. This website is a collection of projects that he has worked on over the past few years.</br></br>
+<a href='mailto:ryan@rskbeck.com' style="color: #00cebe">ryan@rskbeck.com</a></div></div>
       <!--div id='head'>Ryan Kehlenbeck</div>
       <div id='pge'>
         ...
