Added game page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class='bttn' id='art'>
           ART
         </div>
-        <a href='https://www.google.com'><div class='bttn'>
+        <div class='bttn' id='gme'>
           GAMES
-        </div></a>
+        </div>
         <a href='https://www.google.com'><div class='bttn'>
           PROJECTS
         </div></a>
