--- a/pages/games.htm
+++ b/pages/games.htm
@@ -5,8 +5,8 @@
 
 <div id='grid'>
   <div class='box' id='wbsbox' style="background-color: #fff">
-  	<img class='inside' id='wbspic' src='https://rskbeck.github.io/img/wbs/thumb.jpg'></img>
-  	<div class='shadow-inside' />
+  	<img class='inside' id='wbspic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<div class='darkshadow-inside' />
   	<div class='cover' id='wbscover'><div class='centeredtext'>WATER BALLOON</br>SIMULATOR</br>(2016)</div></div>
   </div>
 </div>
