--- a/pages/games.htm
+++ b/pages/games.htm
@@ -6,7 +6,7 @@
 <div id='grid'>
   <div class='box' id='wbsbox' style="background-color: #fff">
   	<img class='inside' id='wbspic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
-  	<div class='darkshadow-inside' />
+  	<div class='darkshadow-inside' style='opacity:0.5'/>
   	<div class='cover' id='wbscover'><div class='centeredtext'>WATER BALLOON</br>SIMULATOR</br>(2016)</div></div>
   </div>
 </div>
