--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class='bttn' id='gme'>
           GAMES
         </div>
-        <a href='https://www.google.com'><div class='bttn'>
+        <div class='bttn' id='pro'>
           PROJECTS
-        </div></a>
+        </div>
         <div class='bttn' id='hme'>
           HOME
         </div>
