--- a/pages/proj.htm
+++ b/pages/proj.htm
@@ -4,8 +4,9 @@
 </head>
 
 <div id='grid'>
-  <div class='shadow-box' id='stylobox' style="background-color: #fff">
-  	<img class='inside' id='stylopic' src=''></img>
+  <div class='box' id='stylobox' style="background-color: #fff">
+  	<!--img class='inside' id='stylopic' src=''></img-->
+  	<div class='shadow-inside' />
   	<div class='cover' id='stylocover'><div class='centeredtext'>STYLO</br>(2016-2017)</div></div>
   </div>
 </div>
