--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           HOME
         </div>
       </div>
-      <div id='pge'><div id='scroller'><div id='head'>RYAN KEHLENBECK</div></br></br></br>
-Ryan Kehlenbeck is a Software Engineer, Musician, and Artist. He recently graduated from Cal Poly, San Luis Obispo with a bachelor's degree in Software Engineering. He enjoys writing code, 3D modeling, writing music, making games, and playing games. This website is a collection of projects that he has worked on over the past few years.</br></br>
+      <div id='pge'><div id='scroller'><div id='head'>RYAN KEHLENBECK</div></br></br><div id='padder'>
+Ryan Kehlenbeck is a Software Engineer, Musician, and Artist. He recently graduated from Cal Poly, San Luis Obispo with a bachelor's degree in Software Engineering. He enjoys writing code, 3D modeling, writing music, making games, and playing games. This website is a collection of projects that he has worked on over the past few years.</div></br>
 <a href='mailto:ryan@rskbeck.com' style="color: #00cebe">ryan@rskbeck.com</a></div></div>
       <!--div id='head'>Ryan Kehlenbeck</div>
       <div id='pge'>
