--- a/pages/art.htm
+++ b/pages/art.htm
@@ -3,14 +3,89 @@
 <script src="https://rskbeck.github.io/js/art.js"></script>
 </head>
 
+MARCHING CUBES ERROR (2017)
+
+<div id='grid'>
+  <div class='box' id='clipbox' style="background-color: #fff">
+  	<img class='inside' id='clip' src='https://rskbeck.github.io/img/art/clip.PNG'></img>
+  	<div class='cover' id='clipcover'><div class='centeredtext'>CLIP</div></div>
+  </div>
+  <div class='box' id='cutbox' style="background-color: #fff">
+  	<img class='inside' id='cut' src='https://rskbeck.github.io/img/art/cut2.PNG'></img>
+  	<div class='cover' id='cutcover'><div class='centeredtext'>CUT</div></div>
+  </div>
+</div>
+
+SUMMER (2016)
+
+<div id='grid'>
+  <div class='box' id='mintbox' style="background-color: #fff">
+  	<img class='inside' id='mint' src='https://rskbeck.github.io/img/art/mint.png'></img>
+  	<div class='shadow-inside' />
+  	<div class='cover' id='mintcover'><div class='centeredtext'>MINT</div></div>
+  </div>
+  <div class='box' id='popbox' style="background-color: #fff">
+  	<img class='inside' id='pop' src='https://rskbeck.github.io/img/art/chopo.png'></img>
+  	<div class='shadow-inside' />
+  	<div class='cover' id='popcover'><div class='centeredtext'>POP</div></div>
+  </div>
+  <div class='box' id='poptbox' style="background-color: #fff">
+  	<img class='inside' id='popt' src='https://rskbeck.github.io/img/art/tez.png'></img>
+  	<div class='shadow-inside' />
+  	<div class='cover' id='poptcover'><div class='centeredtext'>POP</br>SHIRT</div></div>
+  </div>
+  <div class='box' id='popgbox' style="background-color: #EFE4D4">
+  	<img class='inside' id='popg' src='https://rskbeck.github.io/img/art/dripopco.png'></img>
+  	<div class='darkshadow-inside' style='opacity:.5'/>
+  	<div class='cover' id='popgcover'><div class='centeredtext'>POP</br>GLITCH</div></div>
+  </div>
+</div>
+
+GLITCH (2016)
+
 <div id='grid'>
   <div class='shadow-box' id='morph' style="background-color: #333">
-  	<img class='inside' id='splash' src='https://rskbeck.000webhostapp.com/melt.gif'></img>
-  	<div class='cover' id='morphcover'><div class='centeredtext'>SPLASH</br>(2016)</div></div>
+  	<img class='inside' id='splash' src='https://rskbeck.github.io/img/art/melt.gif'></img>
+  	<div class='cover' id='morphcover'><div class='centeredtext'>SPLASH</br>GIF</div></div>
   </div>
   <div class='box' id='glitch' style="background-color: #fff">
-  	<img class='inside' id='2' src='https://rskbeck.github.io/img/2.jpg'></img>
+  	<img class='inside' id='2' src='https://rskbeck.github.io/img/art/good.png'></img>
   	<div class='shadow-inside' />
-  	<div class='cover' id='glitchcover'><div class='centeredtext'>GLITCH</br>(2016)</div></div>
+  	<div class='cover' id='glitchcover'><div class='centeredtext'>VAPOR</div></div>
+  </div>
+</div>
+
+SET (2015)
+<div id='grid'>
+  <div class='box' id='dropbox' style="background-color: #fff">
+  	<img class='inside' id='drop' src='https://rskbeck.github.io/img/art/drop.png'></img>
+  	<div class='cover' id='dropcover'><div class='centeredtext'>DROP</div></div>
+  </div>
+  <div class='box' id='handbox' style="background-color: #fff">
+  	<img class='inside' id='hand' src='https://rskbeck.github.io/img/art/hand2.png'></img>
+  	<div class='cover' id='handcover'><div class='centeredtext'>HAND</div></div>
+  </div>
+  <div class='box' id='skullbox' style="background-color: #fff">
+  	<img class='inside' id='skull' src='https://rskbeck.github.io/img/art/skull2.png'></img>
+  	<div class='cover' id='skullcover'><div class='centeredtext'>SKULL</div></div>
+  </div>
+  <div class='box' id='splbox' style="background-color: #fff">
+  	<img class='inside' id='spl' src='https://rskbeck.github.io/img/art/splash.png'></img>
+  	<div class='cover' id='splcover'><div class='centeredtext'>SPLASH</div></div>
+  </div>
+</div>
+
+GLITCH (2015)
+
+<div id='grid'>
+  <div class='shadow-box' id='cobox' style="background-color: #fff">
+  	<img class='inside' id='co' src='https://rskbeck.github.io/img/art/cococo.jpg'></img>
+  	<div class='darkshadow-inside' style='opacity:.5'/>
+  	<div class='cover' id='cocover'><div class='centeredtext'>FOLDS</div></div>
+  </div>
+  <div class='box' id='starbox' style="background-color: #fff">
+  	<img class='inside' id='star' src='https://rskbeck.github.io/img/art/swag.bmp'></img>
+  	<div class='darkshadow-inside' style='opacity:.5'/>
+  	<div class='cover' id='starcover'><div class='centeredtext'>STAR</br>(2016)</div></div>
   </div>
 </div>
