--- a/pages/art.htm
+++ b/pages/art.htm
@@ -5,7 +5,7 @@
 
 MARCHING CUBES ERROR (2017)
 
-<div id='grid'>
+<div class='grid'>
   <div class='box' id='clipbox' style="background-color: #fff">
   	<img class='inside' id='clip' src='https://rskbeck.github.io/img/art/clip.PNG'></img>
   	<div class='cover' id='clipcover'><div class='centeredtext'>CLIP</div></div>
@@ -18,7 +18,7 @@ MARCHING CUBES ERROR (2017)
 
 SUMMER (2016)
 
-<div id='grid'>
+<div class='grid'>
   <div class='box' id='mintbox' style="background-color: #fff">
   	<img class='inside' id='mint' src='https://rskbeck.github.io/img/art/mint.png'></img>
   	<div class='shadow-inside' />
@@ -43,7 +43,7 @@ SUMMER (2016)
 
 GLITCH (2016)
 
-<div id='grid'>
+<div class='grid'>
   <div class='shadow-box' id='morph' style="background-color: #333">
   	<img class='inside' id='splash' src='https://rskbeck.github.io/img/art/melt.gif'></img>
   	<div class='cover' id='morphcover'><div class='centeredtext'>SPLASH</br>GIF</div></div>
@@ -56,7 +56,7 @@ GLITCH (2016)
 </div>
 
 SET (2015)
-<div id='grid'>
+<div class='grid'>
   <div class='box' id='dropbox' style="background-color: #fff">
   	<img class='inside' id='drop' src='https://rskbeck.github.io/img/art/drop.png'></img>
   	<div class='cover' id='dropcover'><div class='centeredtext'>DROP</div></div>
@@ -77,7 +77,7 @@ SET (2015)
 
 GLITCH (2015)
 
-<div id='grid'>
+<div class='grid'>
   <div class='shadow-box' id='cobox' style="background-color: #fff">
   	<img class='inside' id='co' src='https://rskbeck.github.io/img/art/cococo.jpg'></img>
   	<div class='darkshadow-inside' style='opacity:.5'/>
