--- a/pages/art.htm
+++ b/pages/art.htm
@@ -44,8 +44,9 @@ SUMMER (2016)
 GLITCH (2016)
 
 <div class='grid'>
-  <div class='shadow-box' id='morph' style="background-color: #333">
+  <div class='box' id='morph' style="background-color: #333">
   	<img class='inside' id='splash' src='https://rskbeck.github.io/img/art/melt.gif'></img>
+  	<div class='darkshadow-inside' style="opacity: .5" />
   	<div class='cover' id='morphcover'><div class='centeredtext'>SPLASH</br>GIF</div></div>
   </div>
   <div class='box' id='glitch' style="background-color: #fff">
@@ -78,7 +79,7 @@ SET (2015)
 GLITCH (2015)
 
 <div class='grid'>
-  <div class='shadow-box' id='cobox' style="background-color: #fff">
+  <div class='box' id='cobox' style="background-color: #fff">
   	<img class='inside' id='co' src='https://rskbeck.github.io/img/art/cococo.jpg'></img>
   	<div class='darkshadow-inside' style='opacity:.5'/>
   	<div class='cover' id='cocover'><div class='centeredtext'>FOLDS</div></div>
