Filled art page

--- a/pages/art.htm
+++ b/pages/art.htm
@@ -6,11 +6,11 @@
 MARCHING CUBES ERROR (2017)
 
 <div class='grid'>
-  <div class='box' id='clipbox' style="background-color: #fff">
+  <div class='box' id='clipbox' style="background-color: #000">
   	<img class='inside' id='clip' src='https://rskbeck.github.io/img/art/clip.PNG'></img>
   	<div class='cover' id='clipcover'><div class='centeredtext'>CLIP</div></div>
   </div>
-  <div class='box' id='cutbox' style="background-color: #fff">
+  <div class='box' id='cutbox' style="background-color: #000">
   	<img class='inside' id='cut' src='https://rskbeck.github.io/img/art/cut2.PNG'></img>
   	<div class='cover' id='cutcover'><div class='centeredtext'>CUT</div></div>
   </div>
@@ -58,19 +58,19 @@ GLITCH (2016)
 
 SET (2015)
 <div class='grid'>
-  <div class='box' id='dropbox' style="background-color: #fff">
+  <div class='box' id='dropbox' style="background-color: #000">
   	<img class='inside' id='drop' src='https://rskbeck.github.io/img/art/drop.png'></img>
   	<div class='cover' id='dropcover'><div class='centeredtext'>DROP</div></div>
   </div>
-  <div class='box' id='handbox' style="background-color: #fff">
+  <div class='box' id='handbox' style="background-color: #000">
   	<img class='inside' id='hand' src='https://rskbeck.github.io/img/art/hand2.png'></img>
   	<div class='cover' id='handcover'><div class='centeredtext'>HAND</div></div>
   </div>
-  <div class='box' id='skullbox' style="background-color: #fff">
+  <div class='box' id='skullbox' style="background-color: #000">
   	<img class='inside' id='skull' src='https://rskbeck.github.io/img/art/skull2.png'></img>
   	<div class='cover' id='skullcover'><div class='centeredtext'>SKULL</div></div>
   </div>
-  <div class='box' id='splbox' style="background-color: #fff">
+  <div class='box' id='splbox' style="background-color: #000">
   	<img class='inside' id='spl' src='https://rskbeck.github.io/img/art/splash.png'></img>
   	<div class='cover' id='splcover'><div class='centeredtext'>SPLASH</div></div>
   </div>
