Filled art page

--- a/pages/art.htm
+++ b/pages/art.htm
@@ -21,17 +21,17 @@ SUMMER (2016)
 <div class='grid'>
   <div class='box' id='mintbox' style="background-color: #fff">
   	<img class='inside' id='mint' src='https://rskbeck.github.io/img/art/mint.png'></img>
-  	<div class='shadow-inside' />
+  	<div class='darkshadow-inside' style='opacity:.5'/>
   	<div class='cover' id='mintcover'><div class='centeredtext'>MINT</div></div>
   </div>
   <div class='box' id='popbox' style="background-color: #fff">
   	<img class='inside' id='pop' src='https://rskbeck.github.io/img/art/chopo.png'></img>
-  	<div class='shadow-inside' />
+  	<div class='darkshadow-inside' style='opacity:.5'/>
   	<div class='cover' id='popcover'><div class='centeredtext'>POP</div></div>
   </div>
   <div class='box' id='poptbox' style="background-color: #fff">
   	<img class='inside' id='popt' src='https://rskbeck.github.io/img/art/tez.png'></img>
-  	<div class='shadow-inside' />
+  	<div class='darkshadow-inside' style='opacity:.5'/>
   	<div class='cover' id='poptcover'><div class='centeredtext'>POP</br>SHIRT</div></div>
   </div>
   <div class='box' id='popgbox' style="background-color: #EFE4D4">
@@ -51,7 +51,7 @@ GLITCH (2016)
   </div>
   <div class='box' id='glitch' style="background-color: #fff">
   	<img class='inside' id='2' src='https://rskbeck.github.io/img/art/good.png'></img>
-  	<div class='shadow-inside' />
+  	<div class='darkshadow-inside' style='opacity:.5'/>
   	<div class='cover' id='glitchcover'><div class='centeredtext'>VAPOR</div></div>
   </div>
 </div>
