Filled art page

--- a/pages/games.htm
+++ b/pages/games.htm
@@ -3,10 +3,39 @@
 <script src="https://rskbeck.github.io/js/game.js"></script>
 </head>
 
-<div id='grid'>
+<div id='headtitle'>GAMES</div>
+
+IN PROGRESS
+
+<div class='grid'>
+  <div class='box' id='ctfbox' style="background-color: #00a0c0">
+  	<img class='inside' id='ctfpic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<div class='darkshadow-inside' style='opacity:0.5'/>
+  	<div class='cover' id='ctfcover'><div class='centeredtext'>CAPTURE THE</br>FLAG</br>(WIP)</div></div>
+  </div>
+</div>
+
+2017
+
+<div class='grid'>
+  <div class='box' id='canybox' style="background-color: #f40">
+  	<img class='inside' id='canypic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<div class='darkshadow-inside' style='opacity:0.5'/>
+  	<div class='cover' id='canycover'><div class='centeredtext'>CANYONS</div></div>
+  </div>
+  <div class='box' id='wolfbox' style="background-color: #333">
+  	<img class='inside' id='wolfpic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<div class='darkshadow-inside' style='opacity:0.5'/>
+  	<div class='cover' id='wolfcover'><div class='centeredtext'>WOLFBLOOD</br>(2D \& 3D)</div></div>
+  </div>
+</div>
+
+2016
+
+<div class='grid'>
   <div class='box' id='wbsbox' style="background-color: #fff">
   	<img class='inside' id='wbspic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
-  	<div class='cover' id='wbscover'><div class='centeredtext'>WATER BALLOON</br>SIMULATOR</br>(2016)</div></div>
+  	<div class='cover' id='wbscover'><div class='centeredtext'>WATER BALLOON</br>SIMULATOR</div></div>
   </div>
 </div>
