--- a/pages/proj.htm
+++ b/pages/proj.htm
@@ -3,10 +3,19 @@
 <script src="https://rskbeck.github.io/js/proj.js"></script>
 </head>
 
-<div id='grid'>
-  <div class='box' id='stylobox' style="background-color: #fff">
+<div id='headtitle'>PROJECTS</div>
+
+2017
+
+<div class='grid'>
+  <div class='box' id='stylobox' style="background-color: #3f2">
   	<!--img class='inside' id='stylopic' src=''></img-->
-  	<div class='shadow-inside' />
+  	<div class='darkshadow-inside' style="opacity: .5" />
   	<div class='cover' id='stylocover'><div class='centeredtext'>STYLO</br>(2016-2017)</div></div>
+  </div>
+  <div class='box' id='cvbrmbox' style="background-color: #00f">
+  	<!--img class='inside' id='cvbrmpic' src=''></img-->
+  	<div class='darkshadow-inside' style="opacity: .5" />
+  	<div class='cover' id='cvbrmcover'><div class='centeredtext'>CVBRM</br>(2017)</div></div>
   </div>
 </div>
