--- a/pages/art.htm
+++ b/pages/art.htm
@@ -3,6 +3,8 @@
 <script src="https://rskbeck.github.io/js/art.js"></script>
 </head>
 
+<div id='headtitle'>ART</div>
+
 <b>MARCHING CUBES ERROR</b> (2017)
 
 <div class='grid'>
