--- a/pages/proj.htm
+++ b/pages/proj.htm
@@ -3,9 +3,9 @@
 <script src="https://rskbeck.github.io/js/proj.js"></script>
 </head>
 
-<div id='headtitle'>PROJECTS</div>
+<div id='headtitle' style="text-align: center;">PROJECTS</div>
 
-2017
+<b style="text-align: left;">2017</b>
 
 <div class='grid'>
   <div class='box' id='stylobox' style="background-color: #3f2">
