Filled art page

--- a/pages/games.htm
+++ b/pages/games.htm
@@ -3,9 +3,9 @@
 <script src="https://rskbeck.github.io/js/game.js"></script>
 </head>
 
-<div id='headtitle' style="text-align: center;">GAMES</div>
+<div id='headtitle'>GAMES</div>
 
-<b style="text-align: left;">IN PROGRESS</b>
+<div class='subby'>IN PROGRESS</div>>
 
 <div class='grid'>
   <div class='box' id='ctfbox' style="background-color: #00a0c0">
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<b style="text-align: left;">2017</b>
+<div class='subby'>2017</div>
 
 <div class='grid'>
   <div class='box' id='canybox' style="background-color: #f40">
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<b style="text-align: left;">2016</b>
+<div class='subby'>2016</div>
 
 <div class='grid'>
   <div class='box' id='wbsbox' style="background-color: #fff">
