Filled art page

--- a/pages/games.htm
+++ b/pages/games.htm
@@ -5,7 +5,7 @@
 
 <div id='headtitle'>GAMES</div>
 
-<div class='subby'>IN PROGRESS</div>>
+<b>IN PROGRESS</b>
 
 <div class='grid'>
   <div class='box' id='ctfbox' style="background-color: #00a0c0">
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class='subby'>2017</div>
+<b>2017</b>
 
 <div class='grid'>
   <div class='box' id='canybox' style="background-color: #f40">
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<div class='subby'>2016</div>
+<b>2016</b>
 
 <div class='grid'>
   <div class='box' id='wbsbox' style="background-color: #fff">
