Filled art page

--- a/pages/games.htm
+++ b/pages/games.htm
@@ -9,7 +9,7 @@
 
 <div class='grid'>
   <div class='box' id='ctfbox' style="background-color: #00a0c0">
-  	<img class='inside' id='ctfpic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<img class='inside' id='ctfpic' src='https://rskbeck.github.io/img/wip/wipthumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
   	<div class='cover' id='ctfcover'><div class='centeredtext'>CAPTURE THE</br>FLAG</br>(WIP)</div></div>
   </div>
@@ -19,14 +19,14 @@
 
 <div class='grid'>
   <div class='box' id='canybox' style="background-color: #f40">
-  	<img class='inside' id='canypic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<img class='inside' id='canypic' src='https://rskbeck.github.io/img/cany/canyonsthumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
   	<div class='cover' id='canycover'><div class='centeredtext'>CANYONS</div></div>
   </div>
   <div class='box' id='wolfbox' style="background-color: #333">
-  	<img class='inside' id='wolfpic' src='https://rskbeck.github.io/img/wbs/thumb.png'></img>
+  	<img class='inside' id='wolfpic' src='https://rskbeck.github.io/img/wbs/wolf/wolfthumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
-  	<div class='cover' id='wolfcover'><div class='centeredtext'>WOLFBLOOD</br>(2D \& 3D)</div></div>
+  	<div class='cover' id='wolfcover'><div class='centeredtext'>WOLFBLOOD</br>(2D & 3D)</div></div>
   </div>
 </div>
 
