Filled art page

--- a/pages/games.htm
+++ b/pages/games.htm
@@ -24,7 +24,7 @@
   	<div class='cover' id='canycover'><div class='centeredtext'>CANYONS</div></div>
   </div>
   <div class='box' id='wolfbox' style="background-color: #333">
-  	<img class='inside' id='wolfpic' src='https://rskbeck.github.io/img/wbs/wolf/wolfthumb.png'></img>
+  	<img class='inside' id='wolfpic' src='https://rskbeck.github.io/img/wolf/wolfthumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
   	<div class='cover' id='wolfcover'><div class='centeredtext'>WOLFBLOOD</br>(2D & 3D)</div></div>
   </div>
