Filled art page

--- a/pages/proj.htm
+++ b/pages/proj.htm
@@ -8,13 +8,13 @@
 <b>2017</b>
 
 <div class='grid'>
-  <div class='box' id='stylobox' style="background-color: #3f2">
-  	<!--img class='inside' id='stylopic' src=''></img-->
+  <div class='box' id='stylobox' style="background-color: #fff">
+  	<img class='inside' id='stylopic' src='https://rskbeck.github.io/img/stylo/stylothumb.png'></img>
   	<div class='darkshadow-inside' style="opacity: .5" />
   	<div class='cover' id='stylocover'><div class='centeredtext'>STYLO</br>(2016-2017)</div></div>
   </div>
-  <div class='box' id='cvbrmbox' style="background-color: #00f">
-  	<!--img class='inside' id='cvbrmpic' src=''></img-->
+  <div class='box' id='cvbrmbox' style="background-color: #fff">
+  	<img class='inside' id='cvbrmpic' src='https://rskbeck.github.io/img/cvbrm/cvbrmthumb.png'></img>
   	<div class='darkshadow-inside' style="opacity: .5" />
   	<div class='cover' id='cvbrmcover'><div class='centeredtext'>CVBRM</br>(2017)</div></div>
   </div>
