--- a/pages/games/wolf.htm
+++ b/pages/games/wolf.htm
@@ -3,34 +3,34 @@
 </head>
 
 <body>
-  <div id='title'>Wolfblood 2D</br>Andrew Peterson, Jacob Francis, Ryan Kehlenbeck</div>
+  <div id='title'>Wolfblood 2D<div class="subtitle" style="text-align:center">Andrew Peterson, Jacob Francis, Ryan Kehlenbeck</div></div>
 <div id='bod'>
-  <img src='https://rskbeck.github.io/img/wolf/wolfmain.PNG' />
+  <img src='https://rskbeck.github.io/img/wolf/wolfmain.PNG' style="width:70%" />
   <p>
     A 2D side scroller about an adventurer turned into a wolf, trying to figure out how to turn back. The game tells the story of Lucas the werewolf as he battles evil werewolves. The project was written in Java using the Greenfoot engine.</p>
-  <video src='https://rskbeck.github.io/img/wolf/2Dplay.webm'/>
+  <video src='https://rskbeck.github.io/img/wolf/2Dplay.webm' controls loop />
   <p>I implemented the player’s movement and the initial side scrolling mechanism. I also added a dialog system that paused play when certain dialog boxes appeared. 
   </p>
-<video src='https://rskbeck.github.io/img/wolf/2Dbox.webm'/>
+<video src='https://rskbeck.github.io/img/wolf/2Dbox.webm' controls loop/>
   <p>I created the art for the witch character in Photoshop. I composed and scripted all of the game’s music and sound.</p>
 <img src='https://rskbeck.github.io/img/wolf/witch.png' />
 <p>Growl</p>
-<audio src="https://rskbeck.github.io/img/wolf/growl1.mp3"></audio>
+<audio src="https://rskbeck.github.io/img/wolf/growl1.mp3" controls></audio>
 <p>Battle</p>
-<audio src="https://rskbeck.github.io/img/wolf/battle.mp3"></audio>
+<audio src="https://rskbeck.github.io/img/wolf/battle.mp3" controls></audio>
 <p>Boss</p>
-<audio src="https://rskbeck.github.io/img/wolf/boss.mp3"></audio>
+<audio src="https://rskbeck.github.io/img/wolf/boss.mp3" controls></audio>
 
-<div class='subtitle'>Wolfblood 3D</div>
+<div class="subtitle" style="text-align:center">Wolfblood 3D</div>
 
-<img src='https://rskbeck.github.io/img/wolf/w3main.PNG' />
+<img src='https://rskbeck.github.io/img/wolf/w3main.PNG' style="width:70%"/>
   <p>
     As an assignment the class was asked to take the character from a previous game of ours and recreate them in a different engine. Since Wolfblood was a 2D game, I though it would be interesting to recreate the main character in 3D using an engine I had never used before, Godot. While the engine definitely seemed to cater to 2D development and there were less resources available for 3D development with the engine, I really enjoyed using the engine.</p>
-  <video src='https://rskbeck.github.io/img/wolf/3Dplay.webm'/>
+  <video src='https://rskbeck.github.io/img/wolf/3Dplay.webm' controls loop/>
   <p>I modeled, rigged, and animated the player character, Lucas, from Wolfblood using blender and wrote a toon shader to give him a similar look to the original game. My favorite feature of Godot was the ability to write my shader code inside the editor, which really helped me see changes quickly after making edits. 
   </p>
-</br></br>
+</br>
   <p>I added some lights with particles in order to retain some of the imagery from the original and also used one of the tracks from the original for background music. The engine made this all really easy to do without having to look at much documentation.</p>
-<video src='https://rskbeck.github.io/img/wolf/3Dlight.webm'/>
+<video src='https://rskbeck.github.io/img/wolf/3Dlight.webm' controls loop/>
 </div>
 </body>
