Added wolf and cany pages

--- a/pages/games/cany.htm
+++ b/pages/games/cany.htm
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <div id='title'>Canyons<div class="subtitle" style="text-align:center">Andrew Peterson, Kayleigh Rago, Michael Griffith, Ryan Kehlenbeck</div></div>
+  <div id='title'>Canyons</br><div class="subtitle" style="text-align:center">Andrew Peterson, Kayleigh Rago, Michael Griffith, Ryan Kehlenbeck</div></div>
 <div id='bod'>
   <img src='https://rskbeck.github.io/img/cany/canMain.png' style="width:70%"  />
   <p>
