--- a/pages/games/wolf.htm
+++ b/pages/games/wolf.htm
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <div id='title'>Wolfblood 2D<div class="subtitle" style="text-align:center">Andrew Peterson, Jacob Francis, Ryan Kehlenbeck</div></div>
+  <div id='title'>Wolfblood 2D</br><div class="subtitle" style="text-align:center">Andrew Peterson, Jacob Francis, Ryan Kehlenbeck</div></div>
 <div id='bod'>
   <img src='https://rskbeck.github.io/img/wolf/wolfmain.PNG' style="width:70%" />
   <p>
@@ -15,13 +15,13 @@
   <p>I created the art for the witch character in Photoshop. I composed and scripted all of the game’s music and sound.</p>
 <img src='https://rskbeck.github.io/img/wolf/witch.png' />
 <p>Growl</p>
-<audio src="https://rskbeck.github.io/img/wolf/growl1.mp3" controls></audio>
+<audio src="https://rskbeck.github.io/img/wolf/growl.mp3" controls></audio>
 <p>Battle</p>
 <audio src="https://rskbeck.github.io/img/wolf/battle.mp3" controls></audio>
 <p>Boss</p>
-<audio src="https://rskbeck.github.io/img/wolf/boss.mp3" controls></audio>
+<audio src="https://rskbeck.github.io/img/wolf/boss.mp3" controls></audio></br></br>
 
-<div class="subtitle" style="text-align:center">Wolfblood 3D</div>
+<div class="subtitle" style="text-align:center">Wolfblood 3D</div></br>
 
 <img src='https://rskbeck.github.io/img/wolf/w3main.PNG' style="width:70%"/>
   <p>
@@ -29,7 +29,6 @@
   <video src='https://rskbeck.github.io/img/wolf/3Dplay.webm' controls loop/>
   <p>I modeled, rigged, and animated the player character, Lucas, from Wolfblood using blender and wrote a toon shader to give him a similar look to the original game. My favorite feature of Godot was the ability to write my shader code inside the editor, which really helped me see changes quickly after making edits. 
   </p>
-</br>
   <p>I added some lights with particles in order to retain some of the imagery from the original and also used one of the tracks from the original for background music. The engine made this all really easy to do without having to look at much documentation.</p>
 <video src='https://rskbeck.github.io/img/wolf/3Dlight.webm' controls loop/>
 </div>
