Added proj pages

--- a/pages/projs/stylo.htm
+++ b/pages/projs/stylo.htm
@@ -1,1 +1,19 @@
-Stylo
+<head>
+      <link rel="stylesheet" href="https://rskbeck.github.io/css/pagestyle.css">
+</head>
+
+<body>
+  <div id='title'>Stylo</br><div class="subtitle" style="text-align:center">Andrew Peterson, Jenna Baer, Roslyn Patrick Sunnes, Ryan Kehlenbeck, Zack Cody</div></div>
+<div id='bod'>
+  <img src='https://rskbeck.github.io/img/stylo/stylothumb.png' style="width:70%"  />
+  <p>Stylo is a cross-platform app for messaging groups using drawings. The project was completed part of the yearlong Capstone series of courses at Cal Poly and sponsored by Microsoft. The team I was a part of was responsible for the Android client and most of the functionality of Microsoft Azure backend. The other teams worked on the Windows and iOS clients. Unfortunately, the app is no longer functional because Microsoft is no longer providing our Azure account with credit.</p></br>
+
+  <p>Having some Android experience from a previous class, I helped begin the app by implementing the canvas for drawing using the WILL inking framework by Wacom, which each team agreed to use in order to facilitate drawing across all three platforms.</p></br>
+
+  <p>I was responsible for adding a selection tool with visual feedback, using the intersection capability from the framework.</p></br>
+
+  <p>I added the ability to save drafts and used the Android Room Library announced a at Google IO a couple sprints before the projects completion to implement offline support.</p></br>
+
+  <p>Having the most experience with Android development on my team, I lead our testing efforts by implementing example unit tests using Robolectric and PowerMock. I also set up our continuous integration environment on CircleCI and configured it to run our tests on every commit.</p>
+</div>
+</body>
