--- a/pages/games.htm
+++ b/pages/games.htm
@@ -8,10 +8,10 @@
 <b>IN PROGRESS</b>
 
 <div class='grid'>
-  <div class='box' id='ctfbox' style="background-color: #00a0c0">
-  	<img class='inside' id='ctfpic' src='https://rskbeck.github.io/img/wip/wipthumb.png'></img>
+  <div class='box' id='wipbox' style="background-color: #000000">
+  	<img class='inside' id='wippic' src='https://rskbeck.github.io/img/wip/wipthumb.png'></img>
   	<div class='darkshadow-inside' style='opacity:0.5'/>
-  	<div class='cover' id='ctfcover'><div class='centeredtext'>CAPTURE THE</br>FLAG</br>(WIP)</div></div>
+  	<div class='cover' id='wipcover'><div class='centeredtext'>WEAVER</br>(WIP)</div></div>
   </div>
 </div>
 
