--- a/pages/games/wip.htm
+++ b/pages/games/wip.htm
@@ -3,10 +3,10 @@
 </head>
 
 <body>
-  <div id='title'>Capture The Flag</br><div class='subtitle' style="text-align: center">(Work In Progress)</div></div>
+  <div id='title'>Weaver</br><div class='subtitle' style="text-align: center">(Work In Progress)</div></div>
 <div id='bod'>
-  <img src='https://rskbeck.github.io/img/wip/wipthumb.png' style="width: 70%" />
+  <iframe src="https://giphy.com/embed/3ohc0X4iLONLRhQnra" width="256" height="256" frameBorder="0" class="giphy-embed"></iframe>
   <p>
-    I'm currently working on a capture the flag game. The game takes place between two teams of three and players can be human or AI. My hope is to make it an online multiplayer game. The game will have different stages, weapons, and power-ups to make each game interesting. There will be multiple play modes, like winning based on the highest score or the first team to reach a score.</p>
+    I'm currently working independently on a rogue-like game where the player must cooperate with a team of other players or NPCs to complete objectives, which will vary level to level. Each level will feature an objective like "Find the treasure" or "Defeat the traitor on your team", a set of rules, and a procedurally generated map. The game will also feature multiple character classes, which will affect the behavior of the NPCs. The game is being developed in C++ using SFML.</p>
 </div>
 </body>
